--- a/creImage/Dockerfile
+++ b/creImage/Dockerfile
@@ -24,11 +24,16 @@ LABEL Name="Images for CRE" \
 
 # install tesseract
 # https://github.com/tesseract-ocr/tessdoc
-RUN  apt-get update && \
+# 
+# 
+RUN  
+  add-apt-repository ppa:alex-p/tesseract-ocr && \
+  apt-get update && \
   apt-get -y upgrade && \
   apt-get -y --no-install-recommends install tesseract-ocr tesseract-ocr-eng
 #  apt-get -y --no-install-recommends install tesseract-ocr-all  && \
 #  apt-get -y --no-install-recommends install tesseract-ocr-deu tesseract-ocr-deu-frak
+#   tesseract-ocr-script-frak
 #apt-get install tesseract-ocr-all
 
 ## Move latex to different image
